# PLEIADES

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.rst  environment.yaml  post_install.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package.yaml  unittest.yaml  update-lockfiles.yml
Notebooks/: sammyFitEuNat.ini
Notes/: Pleiades.notes  SammyInputFile.notes  SammyOutputLstFile.notes  SammyParameterFile.notes
docs/: conf.py  examples.rst  index.rst  installation.rst  overview.rst  repo.map  usage.rst  working_dir.map
docs/Notes/: FileStructure-cwd.notes
docs/Notes/Sammy/: SammyInputFile.notes  SammyParameterFile.notes
docs/development/: architecture_v1.md  architecture_v2.md  migration_to_loguru.md  packaging.md
docs/images/: LANL_256x256.tif  ORNL_256x256.tif
examples/: .gitignore
examples/Configuring/makeSammyInputFile/: .gitignore  config.ini  makeInputFile.py
examples/Configuring/makeSammyParameterFile/: makeParameterFile.py
examples/Configuring/sammyParFromENDF/: config_inp.ini  run_sammy.sh
examples/Fitting/fitTransmission/: U_235.ini
examples/Fitting/makeCompoundFit/: Eu_151.ini  Eu_153.ini  singleFitting.py
examples/Notebooks/:  pleiades_sammy_endf..ipynb  .gitignore  compoundFitting.ipynb  makeCompoundFit_Eu.ini  natEu_fit_tutorial.ipynb  nat_europium.ini  pleiades_Si_transmission.ipynb  pleiades_endf_retrieval_caching.ipynb  pleiades_logging_tutorial.ipynb  pleiades_sammy_endf.ipynb  pleiades_sammy_parFile.ipynb  pleiades_tutorial.ipynb  pleiades_venus_demo.ipynb  u_fit_tutorial.ipynb  uranium.ini
examples/Notebooks/Tutorials/: pleiades_endf_retrieval_caching.ipynb
examples/Notebooks/ornl_venus/: au_analysis.ipynb  hf_analysis.ipynb  ta_analysis.ipynb
examples/Simulations/plotCrossSections/: config.ini
examples/Simulations/simTransmission/: isotope.ini  isotopes.ini  simTrans.py
examples/configFiles/: nat_europium.ini  simTransmissionConfig.ini  uranium.ini
examples/data/: natEu.twenty  ta181.twenty  u235-u238.twenty  u235.twenty  u235u238.twenty  u238.twenty
examples/samexm/ex012/: README.FIRST  ex012a  ex012a.inp  ex012a.par
examples/samexm/ex012/results/: SAMMY.PAR  SAMQUA.PAR
examples/samexm/ex027/: README.FIRST  ex027b  ex027b.inp  ex027b.par
examples/samexm/ex027/endf/: ex027a  ex027a.endf  ex027a.inp
examples/scripts/: .gitignore  makeCompoundFit.py  simTransmission-U.py  simTransmissionSpec.py
examples/scripts/.older/: compound_fit_using_sammy.ipynb  fitTrans.py  natEuCompoundFit.py  plotXS.py  processLPT.py  singleFitting.py
examples/scripts/.older/simTransmission/: simTrans.py
examples/scripts/Simulations/simTransmission/: isotopes.ini  simTrans.py
examples/scripts/compoundFitting/: makeCompoundFit.py
legacy/Notes/: Pleiades.notes  SammyInputFile.notes  SammyOutputLstFile.notes  SammyParameterFile.notes
legacy/docs/: examples.rst  index.rst  modules.rst  overview.rst  usage.rst
legacy/examples/Notebooks/: natEu_fit_tutorial.ipynb  u_fit_tutorial.ipynb
legacy/examples/scripts/: makeCompoundFit.py  simTransmission-U.py
legacy/examples/scripts/.older/: natEuCompoundFit.py  plotSammyLST.py  plotXS.py
legacy/pleiades_old/: nucData.py  post_install.py  sammyInput.py  sammyOutput.py  sammyParFile.py  sammyPlotter.py  sammyRunner.py  sammyStructures.py  sammyUtils.py  simData.py
legacy/tests/: test_nucData.py  test_sammyInput.py  test_sammyRunner.py  test_sammyUtils.py
notebook/samexm/ex012/: ex012a.ipynb  ex012a.par
notebook/sammy.param/: example.ipynb
notebook/tutorial/: pleiades_endf_retrieval_caching.ipynb
nucDataLibs/isotopeInfo/: neutrons.list
paper/: paper.bib  paper.md
pleiades/: imageProcesser.py  nucData.py  sammyInput.py  sammyOutput.py  sammyParFile.py  sammyPlotter.py  sammyRunner.py  sammyStructures.py  sammyUtils.py  simData.py
scripts/Configuring/: .gitignore  sammyFitEuNat.ini  sammyFitU.ini
scripts/Configuring/makeCompoundFit/: makeCompoundFit.ini  makeCompoundFit.py  makeCompoundFit_Eu.ini
scripts/Configuring/makeCompoundParFile/: .gitignore  makeCompoundParFile.py
scripts/Configuring/makeSammyParFileFromENDF/: makeParFromENDF.py
scripts/ProcessAndPlot/plotOutput/: plotSammyLST.py
src/pleiades/: __init__.py  __main__.py  nucData.py  post_install.py  sammyInput.py  sammyOutput.py  sammyParFile.py  sammyPlotter.py  sammyRunner.py  sammyStructures.py  sammyUtils.py  simData.py
src/pleiades/core/: config.py  constants.py  data_manager.py  models.py  nuclear_params.py  physics_params.py  transmission.py
src/pleiades/data/cross_sections/: au-n.tot  ta-n.tot
src/pleiades/data/isotopes/: isotopes.info
src/pleiades/experimental/: models.py  parameters.py
src/pleiades/experimental/UserResolutionFiles/: fp5_1eV500eV125ns.txt
src/pleiades/nuclear/: manager.py  models.py  parameters.py
src/pleiades/nuclear/cross_sections/: au-n.tot  ta-n.tot
src/pleiades/nuclear/isotopes/: manager.py  models.py
src/pleiades/processing/: __init__.py  helper_ornl.py  models_ornl.py  normalization.py  normalization_handler.py  normalization_ornl.py  normalization_v1.py
src/pleiades/results/: models.py
src/pleiades/sammy/: alphanumeric_options.py  config.py  factory.py  fit_options.py  fit_params.py  interface.py  parfile.py
src/pleiades/sammy/alphanumerics/: __init__.py  alphanumericOptions.notes  angular_distribution.py  averages.py  bayes.py  bayes_solution.py  broad.py  broadening.py  covariance_matrix_data.py  cross_section.py  data.py  dcm.py  endf.py  experimental_data_input.py  input_quantum_numbers.py  lpt.py  msc.py  params.py  rm.py  (+13 more)
src/pleiades/utils/: config.py  files.py  helper.py  image_processing.py  load.py  logger.py  nexus.py  plotter.py  timepix.py  timepix_at_VENUS.py  units.py
tests/: test_nucData.py  test_sammyInput.py  test_sammyRunner.py  test_sammyUtils.py
tests/data/config/: sammy_runner.yaml
tests/data/ex012/: README.FIRST  ex012a  ex012a.bat  ex012a.inp  ex012a.par
tests/unit/: conftest.py
tests/unit/pleiades/: test_processing.py
(+173 files in other folders)
