[tool.poetry]
name = "pleiades"
version = "0.1.1"
description = "PLEIADES - Python Libraries Extensions for Isotopic Analysis via Detailed Examination of SAMMY"
authors = ["Alex M. Long <alexlong@lanl.gov>"]
license = "MIT"
packages = [
    { include = "pleiades", from = "src" }
]
include = [
    "src/pleiades/data/isotopes/*",
    "src/pleiades/data/resonances/*",
    "src/pleiades/data/cross_sections/*"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------- #
# This section is for users who want to install via `poetry` #
# ---------------------------------------------------------- #
[tool.poetry.dependencies]
# Core
python = "^3.10"  # replace with the appropriate Python version
setuptools = "*"
# Numerical
numpy = "*"
scipy = "*"
pandas = "*"
# Visualization
matplotlib = ">=3.1.2"
# Notebooks
jupyterlab = "^4.3.0"
# Nova backend
nova-galaxy = "^0.4.0"
pyyaml = "^6.0.2"
pydantic = "^2.10.4"

[tool.poetry.scripts]
pleiades = "pleiades:main"  # Console script entry point
post_install_check = "pleiades.post_install:check_sammy_installed"


# --------------------------------------------- #
# The rest all 3rd party plugins configurations #
# --------------------------------------------- #
[tool.pytest.ini_options]
addopts = "-v --cov=pleiades --cov-report=term-missing"
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "ARG","ASYNC", "E", "F", "I", "N", "UP032", "W"]
