[project]
name = "pleiades"
version = "0.1.1"
description = "PLEIADES - Python Libraries Extensions for Isotopic Analysis via Detailed Examination of SAMMY"
license = "MIT"
authors = [
    {name = "Alex M. Long", email = "alexlong@lanl.gov"},
    {name = "Tsviki Hirsh", email = "tsviki.hirsh@gmail.com"},
    {name = "Chen Zhang", email = "zhangc@ornl.gov"},
    {name = "Jean Bilheux", email = "bilheuxjm@ornl.gov"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "setuptools",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "jupyterlab",
    "nova-galaxy",
    "pyyaml",
    "pydantic",
]

[project.scripts]
pleiades = "pleiades:main"  # Console script entry point
post_install_check = "pleiades.post_install:check_sammy_installed"

# ---------------------------------------------------------- #
# This section is for users who want to install via `poetry` #
# ---------------------------------------------------------- #
[tool.poetry]
packages = [
    { include = "pleiades", from = "src" }
]
include = [
    "src/pleiades/data/isotopes/*",
    "src/pleiades/data/resonances/*",
    "src/pleiades/data/cross_sections/*"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"

# --------------------------------------------- #
# The rest all 3rd party plugins configurations #
# --------------------------------------------- #
[tool.pytest.ini_options]
addopts = "-v --cov=pleiades --cov-report=term-missing"
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["A", "ARG","ASYNC", "E", "F", "I", "UP032", "W"]
